age mix up correction

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
-      const descendingAge = inventors.sort((a, b) => b.year - a.year);
+      const descendingAge = inventors.sort((a, b) => a.year - b.year);
       console.table(descendingAge);
 
       // Array.prototype.reduce()
