--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@
       const totalYears = inventors.reduce((total, inventor) => {
         return total + (inventor.passed - inventor.year);
       }, 0);
-      console.log(totalYears);
+      //   console.log(totalYears);
 
       // 5. Sort the inventors by years lived
+      const oldest = inventors.sort(
+        (a, b) => (b.passed - b.year) - (a.passed - a.year)
+      );
+      console.table(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
