--- a/index.html
+++ b/index.html
@@ -99,12 +99,19 @@
 
       // 5. Sort the inventors by years lived
       const oldest = inventors.sort(
-        (a, b) => (b.passed - b.year) - (a.passed - a.year)
+        (a, b) => b.passed - b.year - (a.passed - a.year)
       );
-      console.table(oldest);
+      //   console.table(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+      const category = document.querySelector(".mw-category");
+      const links = [...category.querySelectorAll("a")];
+
+      const de = links
+        .map((link) => link.textContent)
+        .filter((streetName) => streetName.includes("de"));
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
