--- a/index.html
+++ b/index.html
@@ -106,15 +106,21 @@
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-      const category = document.querySelector(".mw-category");
-      const links = [...category.querySelectorAll("a")];
+      //   const category = document.querySelector(".mw-category");
+      //   const links = [...category.querySelectorAll("a")];
 
-      const de = links
-        .map((link) => link.textContent)
-        .filter((streetName) => streetName.includes("de"));
+      //   const de = links
+      //     .map((link) => link.textContent)
+      //     .filter((streetName) => streetName.includes("de"));
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
+      const orderedPeople = people.sort();
+      const peopleList = orderedPeople.map((person) =>
+        person.split(", ").reverse().join(" ")
+      );
+
+      console.table(peopleList);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
