uncommented console logged answers

--- a/index.html
+++ b/index.html
@@ -76,32 +76,32 @@
       const fifteen = inventors.filter(
         (inventor) => inventor.year >= 1500 && inventor.year < 1600
       );
-      //   console.table(fifteen);
+        console.table(fifteen);
 
       // Array.prototype.map()
       // 2. Give us an array of the inventors first and last names
       const list = inventors.map(
         (inventor) => `${inventor.first} ${inventor.last}`
       );
-      //   console.log(list);
+        console.log(list);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
       const descendingAge = inventors.sort((a, b) => a.year - b.year);
-      //   console.table(descendingAge);
+        console.table(descendingAge);
 
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live all together?
       const totalYears = inventors.reduce((total, inventor) => {
         return total + (inventor.passed - inventor.year);
       }, 0);
-      //   console.log(totalYears);
+        console.log(totalYears);
 
       // 5. Sort the inventors by years lived
       const oldest = inventors.sort(
         (a, b) => b.passed - b.year - (a.passed - a.year)
       );
-      //   console.table(oldest);
+        console.table(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -119,7 +119,7 @@
       const peopleList = orderedPeople.map((person) =>
         person.split(", ").reverse().join(" ")
       );
-    //   console.table(peopleList);
+      console.table(peopleList);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
